fix curerent menu item is invisible bug

--- a/assets/styles/_menus.scss
+++ b/assets/styles/_menus.scss
@@ -43,11 +43,11 @@
             padding: 1.82em 1.25em;
         }
     }
-    a:hover,
+    /*a:hover,
     a:focus,
     &.current-menu-item>a {
         color: $accent;
-    }
+    }*/
 }
 
 
